--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="magazine">Magazine</string>
-    <string name="artsandleisure"><![CDATA[Arts & Leisure]]></string>
+    <string name="artsandleisure"><![CDATA[Art & Leisure]]></string>
     <string name="movies">Movies</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
 </resources>
