--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">NY Times</string>
     <string name="search">Search</string>
     <string name="search_hint">Enter search query</string>
-    <string name="action_settings">Settings</string>
+    <string name="filters">Filters</string>
     <string name="text_view">Text View</string>
     <string name="title_activity_article">ArticleActivity</string>
     <string name="share">share</string>
